# axeno

./: .gitignore  README.md  run-two-client-test.sh
axeno-client/: .gitignore  README.md  package-lock.json  package.json
axeno-client/src/: App.css  App.tsx  index.css  mockData.ts  types.ts  utils.ts
axeno-client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
axeno-client/src-tauri/src/: commands.rs  identity.rs  lib.rs  main.rs  messaging.rs  transport.rs
axeno-client/src/components/: icons.tsx
axeno-client/src/components/AddContact/: AddContact.css  AddContact.tsx
axeno-client/src/components/ChatSettings/: ChatSettings.css  ChatSettings.tsx
axeno-client/src/components/ChatView/: ChatView.css  ChatView.tsx
axeno-client/src/components/Onboarding/: Onboarding.css  Onboarding.tsx
axeno-client/src/components/Settings/: Settings.css  Settings.tsx
axeno-client/src/components/Sidebar/: Sidebar.css  Sidebar.tsx
axeno-client/src/components/VerifyIdentity/: VerifyIdentity.css  VerifyIdentity.tsx
axeno-server/: Cargo.toml  README.md  onion_address.txt  torrc.example
axeno-server/axeno-relay-data/: relay-state.json
axeno-server/axeno-relay-data/tor/: cached-certs  cached-microdesc-consensus  cached-microdescs.new  state  torrc
axeno-server/axeno-relay-data/tor/hs/: hostname  hs_ed25519_public_key  hs_ed25519_secret_key
axeno-server/src/: main.rs
local-testing/: run-two-client-test.ps1
