[package]
name = "axeno-server"
version = "0.1.0"
edition = "2021"
description = "Minimal Axeno WebSocket relay server for opaque encrypted envelopes"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
dashmap = "6"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"

chacha20poly1305 = "0.10"
argon2 = "0.5"

base64 = "0.22"

getrandom = "0.2"

rand_core = "0.9"

rand_chacha = "0.9"

libsignal-protocol = { git = "https://github.com/signalapp/libsignal", package = "libsignal-protocol" }

hex = "0.4"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
