[package]
name = "axeno-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "axeno_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

libsignal-protocol = { git = "https://github.com/signalapp/libsignal", package = "libsignal-protocol" }

argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
thiserror = "1"

arti-client = { version = "0.26", features = ["tokio", "static"] }
tor-rtcompat = { version = "0.26", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# getrandom for our own secure key generation
# rand 0.8 uses rand_core 0.6, matching libsignal-protocol's trait bounds
getrandom = "0.2"
rand = "0.9"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
